popup.js file added

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shahidul's Extension</title>
+    <script src="jquery.js"></script>
+    <script src="popup.js"></script>
     <style>
         body{
             width: 300px;
@@ -11,6 +13,7 @@
     </style>
 </head>
 <body>
-    <h2>Hi! Welcome to Shahidul's Extension</h2>
+    <h2>Hi,<span id="name"></span>!</h2>
+    <input type="text" id="in" placeholder="Enter your name">
 </body>
 </html>
