introduction to google chrome storage APIs

--- a/popup.html
+++ b/popup.html
@@ -15,5 +15,6 @@
 <body>
     <h2>Hi,<span id="name"></span>!</h2>
     <input type="text" id="in" placeholder="Enter your name">
+    <input type="submit" id="submit" value="Add Name">
 </body>
 </html>
