content.js and eventPage.js file added and popup.html,popup.js edited

--- a/popup.html
+++ b/popup.html
@@ -13,8 +13,7 @@
     </style>
 </head>
 <body>
-    <h2>Hi,<span id="name"></span>!</h2>
-    <input type="text" id="in" placeholder="Enter your name">
-    <input type="submit" id="submit" value="Add Name">
+    <input type="text" id="imageLink" placeholder="Enter your image Link">
+    <input type="submit" id="submit" value="Change BG">
 </body>
 </html>
